# JSProCpp

./: CMakeLists.txt  README.md  codecov.yml  conanfile.py  sonar-project.properties
.github/prompts/: generate-release-note.prompt.md  improve-code-coverage.prompt.md
.github/workflows/: build.yml  coverage.css  pr-tests.yml
include/promise/: CVPromise.h  MessageQueue.h  Mutex.h  Pool.h  StatePromise.h  promise.h
include/promise/core/: Handle.h  Memcheck.h  Promise.h  Reject.h  Resolve.h  Resolver.h  VPromise.h  ValuePromise.h  WPromise.h  concepts.inl  core.h  helpers.h
include/promise/details/: Handle.inl  Promise.inl  Reject.inl  Resolve.inl  Resolver.inl  WPromise.inl  helpers.inl
src/: CVPromise.cpp  Memcheck.cpp  MessageQueue.cpp  Mutex.cpp  Promise.cpp  PromiseExplicitInstantiations.cpp  Reject.cpp  Resolve.cpp  StatePromise.cpp
test/: .clang-tidy  CMakeLists.txt  ExplicitInstantiation.cpp  TestCommon.h
test/CVPromise/: General.cpp
test/MessageQueue/: General.cpp
test/Pool/: General.cpp  MessageQueue.cpp
test/Promise/: Branches.cpp  Chains.cpp  ChainsExtras.cpp  ComplexTypeCoverage.cpp  Core.cpp  CoreBasics.cpp  CorePart1.cpp  CorePart2.cpp  CorePart3.cpp  CorePart4.cpp  CorePart5.cpp  CoverageExtras.cpp  DeepBranches.cpp  DeepBranchesPart1.cpp  DeepBranchesPart2.cpp  DeepBranchesPart3.cpp  DeepBranchesPart4.cpp  DeepBranchesPart5.cpp  General.cpp  Mutex.cpp  RValue.cpp  Reject.cpp  Resolve.cpp  Scenarios.cpp  StringCoverage.cpp  UnitTest.cpp  WPromise.cpp
test/Resolver/: Chains.cpp  DeepBranches.cpp  General.cpp
test/StatePromise/: General.cpp
test/Synchronization/: CVPromise.cpp  Mutex.cpp  StatePromise.cpp
